refactor: use per-env domain secrets
Replace single DEPLOY_DOMAIN with DEPLOY_DOMAIN_PROD and
DEPLOY_DOMAIN_STAGING. Derive VITE_API_URL from domain in
workflows instead of storing it as a separate secret.
Read domains from .secrets/prod.env and .secrets/staging.env
instead of the removed .secrets/env file.

--- a/.github/workflows/deploy-android-play-store.yml
+++ b/.github/workflows/deploy-android-play-store.yml
@@ -168,7 +168,7 @@ jobs:
       - name: Build web assets
         run: pnpm --filter @tearleads/client build
         env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+          VITE_API_URL: https://api.${{ secrets.DEPLOY_DOMAIN_PROD }}/v1
 
       - name: Generate Android images
         run: ./packages/client/scripts/buildAndroidImageAssets.sh
