--- a/.github/workflows/deploy-ios-testflight.yml
+++ b/.github/workflows/deploy-ios-testflight.yml
@@ -165,7 +165,7 @@ jobs:
       - name: Build web assets
         run: pnpm --filter @tearleads/client build
         env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+          VITE_API_URL: https://api.${{ secrets.DEPLOY_DOMAIN_PROD }}/v1
 
       - name: Install ImageMagick
         run: brew install imagemagick
