--- a/.github/workflows/deploy-desktop.yml
+++ b/.github/workflows/deploy-desktop.yml
@@ -139,13 +139,13 @@ jobs:
         if: runner.os != 'macOS'
         run: pnpm --filter @tearleads/client run electron:dist:unsigned
         env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+          VITE_API_URL: https://api.${{ secrets.DEPLOY_DOMAIN_PROD }}/v1
 
       - name: Build signed macOS release artifacts
         if: runner.os == 'macOS'
         run: pnpm --filter @tearleads/client run electron:dist
         env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+          VITE_API_URL: https://api.${{ secrets.DEPLOY_DOMAIN_PROD }}/v1
           APPLE_TEAM_ID: ${{ secrets.TEAM_ID }}
           APPLE_API_KEY: ${{ github.workspace }}/.secrets/AuthKey_${{ secrets.APP_STORE_CONNECT_KEY_ID }}.p8
           APPLE_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
@@ -195,20 +195,20 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/deploy.key
           chmod 600 ~/.ssh/deploy.key
-          ssh-keyscan -H download.${{ secrets.DEPLOY_DOMAIN }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H download.${{ secrets.DEPLOY_DOMAIN_PROD }} >> ~/.ssh/known_hosts
 
       - name: Upload downloads
         run: |
-          ssh -i ~/.ssh/deploy.key ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN }} \
+          ssh -i ~/.ssh/deploy.key ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN_PROD }} \
             "mkdir -p /var/www/downloads/desktop/${APP_VERSION}"
           rsync -avz -e "ssh -vvv -i ~/.ssh/deploy.key" \
-            downloads/ ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN }}:/var/www/downloads/desktop/${APP_VERSION}/
-          ssh -i ~/.ssh/deploy.key ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN }} \
+            downloads/ ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN_PROD }}:/var/www/downloads/desktop/${APP_VERSION}/
+          ssh -i ~/.ssh/deploy.key ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN_PROD }} \
             "ln -sfn /var/www/downloads/desktop/${APP_VERSION} /var/www/downloads/desktop/latest"
 
       - name: Cleanup old versions (keep last 5)
         run: |
-          ssh -i ~/.ssh/deploy.key ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN }} '
+          ssh -i ~/.ssh/deploy.key ${{ secrets.DEPLOY_USER }}@download.${{ secrets.DEPLOY_DOMAIN_PROD }} '
             cd /var/www/downloads/desktop
             # List version directories (exclude latest symlink), sort by version, keep newest 5
             ls -d 0.* 2>/dev/null | sort -V | head -n -5 | xargs -r rm -rf
