feat(vfs): add remote read orchestrator
Integrate in-memory remote read coalescing and debounce for
SSE-triggered VFS sync reads via VfsRealtimeSyncBridge.

Add @tearleads/remote-read-orchestrator package with tests.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -70,6 +70,7 @@
     "@tearleads/local-write-orchestrator": "workspace:*",
     "@tearleads/mls-chat": "workspace:*",
     "@tearleads/notes": "workspace:*",
+    "@tearleads/remote-read-orchestrator": "workspace:*",
     "@tearleads/search": "workspace:*",
     "@tearleads/settings": "workspace:*",
     "@tearleads/shared": "workspace:*",
