ci(workflows): switch tsx install to pnpm
Replace npm global tsx installs with corepack-enabled
pnpm global installs across impacted CI workflows.

--- a/.github/workflows/android-maestro-release.yml
+++ b/.github/workflows/android-maestro-release.yml
@@ -22,7 +22,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install tsx
-        run: npm install -g tsx
+        run: corepack enable && pnpm add -g tsx
 
       - name: Analyze CI impact
         id: impact
