--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,7 +22,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install tsx
-        run: npm install -g tsx
+        run: corepack enable && pnpm add -g tsx
 
       - name: Analyze CI impact
         id: impact
