--- a/.github/workflows/website-e2e.yml
+++ b/.github/workflows/website-e2e.yml
@@ -22,7 +22,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install tsx
-        run: npm install -g tsx
+        run: corepack enable && pnpm add -g tsx
 
       - name: Analyze CI impact
         id: impact
