fix(ansible): harden laptop CLI installs
- scope become to toolchain import in developerLaptop playbook
- make user/group/home lookup cross-platform for macOS and Linux
- use ansible_facts.service_mgr with inject_facts_as_vars disabled
- install codex/gemini only when missing and as non-root user

--- a/ansible/playbooks/developerLaptop.yml
+++ b/ansible/playbooks/developerLaptop.yml
@@ -2,7 +2,6 @@
 - name: Install developer tools on local machine
   hosts: localhost
   connection: local
-  become: true
 
   vars:
     # Use the same Python that runs ansible-playbook (avoids pyenv discovery warning)
@@ -17,6 +16,8 @@
   tasks:
     - name: Install shared developer toolchain
       ansible.builtin.import_tasks: tasks/devToolchain.yml
+      become: true
 
     - name: Configure laptop CLI shell environment
       ansible.builtin.import_tasks: tasks/laptopCliEnvironment.yml
+      become: false
