--- a/.github/workflows/deploy-android-play-store.yml
+++ b/.github/workflows/deploy-android-play-store.yml
@@ -25,7 +25,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install tsx
-        run: corepack enable && pnpm add -g tsx
+        run: echo "Using node --experimental-strip-types for CI impact scripts"
 
       - name: Decide deploy impact
         id: decide
@@ -38,7 +38,7 @@ jobs:
           else
             BASE_SHA="$HEAD_SHA"
           fi
-          tsx scripts/ciImpact/ciImpact.ts --base "$BASE_SHA" --head "$HEAD_SHA" > ci-impact.json
+          node --experimental-strip-types scripts/ciImpact/ciImpact.ts --base "$BASE_SHA" --head "$HEAD_SHA" > ci-impact.json
           SHOULD_DEPLOY=$(jq -r '(.jobs["android"].run or .jobs["android-maestro-release"].run)' ci-impact.json)
 
           LATEST_MAIN_SHA="$HEAD_SHA"
