--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -21,7 +21,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install tsx
-        run: corepack enable && pnpm add -g tsx
+        run: echo "Using node --experimental-strip-types for CI impact scripts"
 
       - name: Decide deploy impact
         id: decide
@@ -34,7 +34,7 @@ jobs:
           else
             BASE_SHA="$HEAD_SHA"
           fi
-          tsx scripts/ciImpact/ciImpact.ts --base "$BASE_SHA" --head "$HEAD_SHA" > ci-impact.json
+          node --experimental-strip-types scripts/ciImpact/ciImpact.ts --base "$BASE_SHA" --head "$HEAD_SHA" > ci-impact.json
           SHOULD_DEPLOY=$(jq -r '(.jobs["web-e2e"].run or .jobs["website-e2e"].run or .jobs["electron-e2e"].run)' ci-impact.json)
           echo "should-deploy=$SHOULD_DEPLOY" >> "$GITHUB_OUTPUT"
           echo "impact-json<<JSON" >> "$GITHUB_OUTPUT"
