--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -20,8 +20,11 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
-      - name: Install tsx
-        run: echo "Using node --experimental-strip-types for CI impact scripts"
+      - name: Setup pnpm
+        uses: pnpm/action-setup
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: Decide deploy impact
         id: decide
@@ -34,7 +37,7 @@ jobs:
           else
             BASE_SHA="$HEAD_SHA"
           fi
-          node --experimental-strip-types scripts/ciImpact/ciImpact.ts --base "$BASE_SHA" --head "$HEAD_SHA" > ci-impact.json
+          pnpm exec tsx scripts/ciImpact/ciImpact.ts --base "$BASE_SHA" --head "$HEAD_SHA" > ci-impact.json
           SHOULD_DEPLOY=$(jq -r '(.jobs["web-e2e"].run or .jobs["website-e2e"].run or .jobs["electron-e2e"].run)' ci-impact.json)
           echo "should-deploy=$SHOULD_DEPLOY" >> "$GITHUB_OUTPUT"
           echo "impact-json<<JSON" >> "$GITHUB_OUTPUT"
