--- a/.github/workflows/deploy-ios-testflight.yml
+++ b/.github/workflows/deploy-ios-testflight.yml
@@ -26,7 +26,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Setup pnpm
-        uses: pnpm/action-setup
+        uses: pnpm/action-setup@v4
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
