--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/kustomization.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   - configmap.yaml
   - postgres.yaml
+  - postgres-replica.yaml
   - redis.yaml
   - garage.yaml
   - smtp-listener.yaml
