--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/postgres.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/postgres.yaml
@@ -29,6 +29,16 @@ spec:
       containers:
         - name: postgres
           image: postgres:16
+          args:
+            - "postgres"
+            - "-c"
+            - "wal_level=replica"
+            - "-c"
+            - "max_wal_senders=3"
+            - "-c"
+            - "max_replication_slots=2"
+            - "-c"
+            - "hot_standby=on"
           ports:
             - containerPort: 5432
           env:
@@ -47,9 +57,16 @@ spec:
                 secretKeyRef:
                   name: tearleads-secrets
                   key: POSTGRES_PASSWORD
+            - name: POSTGRES_REPLICATION_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: POSTGRES_REPLICATION_PASSWORD
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
+            - name: init-replication
+              mountPath: /docker-entrypoint-initdb.d
           resources:
             requests:
               memory: "256Mi"
@@ -61,6 +78,9 @@ spec:
         - name: postgres-data
           persistentVolumeClaim:
             claimName: postgres-pvc
+        - name: init-replication
+          configMap:
+            name: postgres-init-replication
 ---
 apiVersion: v1
 kind: Service
@@ -73,3 +93,19 @@ spec:
   ports:
     - port: 5432
       targetPort: 5432
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-init-replication
+  namespace: tearleads
+data:
+  init-replication.sh: |
+    #!/bin/bash
+    set -e
+
+    psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
+      CREATE USER replicator WITH REPLICATION ENCRYPTED PASSWORD '${POSTGRES_REPLICATION_PASSWORD}';
+    EOSQL
+
+    echo "host replication replicator all md5" >> "$PGDATA/pg_hba.conf"
