--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/secrets.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/secrets.yaml
@@ -13,3 +13,5 @@ stringData:
   GARAGE_ADMIN_TOKEN: "${GARAGE_ADMIN_TOKEN}"
   VFS_BLOB_S3_ACCESS_KEY_ID: "${VFS_BLOB_S3_ACCESS_KEY_ID}"
   VFS_BLOB_S3_SECRET_ACCESS_KEY: "${VFS_BLOB_S3_SECRET_ACCESS_KEY}"
+  # Postgres replication
+  POSTGRES_REPLICATION_PASSWORD: "${POSTGRES_REPLICATION_PASSWORD}"
