fix(k8s): address gemini replica feedback
- add PGPASSWORD to replica postgres containers
- use psql variable substitution for replication password
- switch replication pg_hba auth to scram-sha-256

--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/postgres-replica.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/postgres-replica.yaml
@@ -68,6 +68,11 @@ spec:
                 secretKeyRef:
                   name: tearleads-secrets
                   key: POSTGRES_PASSWORD
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: POSTGRES_REPLICATION_PASSWORD
           volumeMounts:
             - name: postgres-replica-data
               mountPath: /var/lib/postgresql/data
