--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/postgres.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/postgres.yaml
@@ -104,8 +104,9 @@ data:
     #!/bin/bash
     set -e
 
-    psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
-      CREATE USER replicator WITH REPLICATION ENCRYPTED PASSWORD '${POSTGRES_REPLICATION_PASSWORD}';
+    psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" \
+      -v password="${POSTGRES_REPLICATION_PASSWORD}" <<-EOSQL
+      CREATE USER replicator WITH REPLICATION ENCRYPTED PASSWORD :'password';
     EOSQL
 
-    echo "host replication replicator all md5" >> "$PGDATA/pg_hba.conf"
+    echo "host replication replicator all scram-sha-256" >> "$PGDATA/pg_hba.conf"
