ci(web-e2e): use pnpm exec tsx for app config
Remove npm global tsx install from web-e2e config generation
steps and execute via pnpm workspace toolchain.

--- a/.github/workflows/web-e2e.yml
+++ b/.github/workflows/web-e2e.yml
@@ -95,9 +95,8 @@ jobs:
 
       - name: Generate app configs
         run: |
-          npm install -g tsx
           cd packages/app-builder
-          tsx src/cli.ts generate --app tearleads
+          pnpm exec tsx src/cli.ts generate --app tearleads
 
       - name: Build all packages
         run: pnpm build
@@ -204,9 +203,8 @@ jobs:
 
       - name: Generate app configs
         run: |
-          npm install -g tsx
           cd packages/app-builder
-          tsx src/cli.ts generate --app tearleads
+          pnpm exec tsx src/cli.ts generate --app tearleads
 
       - name: Build API and client images (k8s Dockerfiles)
         run: |
