fix: update garage gitignore paths
The garage directory moved from scripts/dev/garage/ to
scripts/garage/ but the .gitignore entries were not updated,
causing .s3-credentials.env and data/ to appear as untracked.

--- a/.gitignore
+++ b/.gitignore
@@ -92,5 +92,5 @@ coverage/
 .claude/commands/tmp/
 
 # Local Garage runtime artifacts
-scripts/dev/garage/data/
-scripts/dev/garage/.s3-credentials.env
+scripts/garage/data/
+scripts/garage/.s3-credentials.env
