--- a/.github/workflows/deploy-staging-k8s.yml
+++ b/.github/workflows/deploy-staging-k8s.yml
@@ -15,8 +15,6 @@ jobs:
     timeout-minutes: 20
     env:
       AWS_REGION: us-east-1
-      STAGING_KUBECONFIG_B64: ${{ secrets.STAGING_KUBECONFIG_B64 }}
-      STAGING_KUBECONFIG_PATH: ${{ vars.STAGING_KUBECONFIG_PATH }}
 
     steps:
       - uses: actions/checkout@v4
@@ -38,39 +36,40 @@ jobs:
           role-to-assume: ${{ vars.AWS_STAGING_ECR_ROLE_ARN }}
           role-session-name: github-actions-staging-k8s-deploy
 
+      - name: Connect to Tailscale
+        uses: tailscale/github-action@v3
+        with:
+          oauth-client-id: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
+          oauth-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
+          tags: tag:ci
+
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
 
       - name: Configure kubeconfig
         run: |
           set -eu
-          KUBECONFIG_FILE="${RUNNER_TEMP}/staging-kubeconfig"
-          if [ -n "$STAGING_KUBECONFIG_B64" ]; then
-            echo "$STAGING_KUBECONFIG_B64" | base64 --decode > "$KUBECONFIG_FILE"
-            chmod 600 "$KUBECONFIG_FILE"
-            echo "KUBECONFIG=$KUBECONFIG_FILE" >> "$GITHUB_ENV"
-            exit 0
-          fi
-
-          if [ -n "$STAGING_KUBECONFIG_PATH" ] && [ -f "$STAGING_KUBECONFIG_PATH" ]; then
-            echo "KUBECONFIG=$STAGING_KUBECONFIG_PATH" >> "$GITHUB_ENV"
-            exit 0
-          fi
-
-          DEFAULT_KUBECONFIG="$HOME/.kube/config-staging-k8s"
-          if [ -f "$DEFAULT_KUBECONFIG" ]; then
-            echo "KUBECONFIG=$DEFAULT_KUBECONFIG" >> "$GITHUB_ENV"
-            exit 0
-          fi
-
-          echo "::error::No staging kubeconfig found. Set secret STAGING_KUBECONFIG_B64 or vars.STAGING_KUBECONFIG_PATH."
-          exit 1
+          mkdir -p ~/.kube
+          echo "${{ secrets.STAGING_KUBECONFIG_B64 }}" | base64 -d > ~/.kube/config
+          sed -i 's|server:.*|server: https://staging-k8s:6443|' ~/.kube/config
+          chmod 600 ~/.kube/config
 
       - name: Verify cluster connectivity
         run: kubectl get nodes
 
       - name: Refresh ECR pull secret
-        run: ./terraform/stacks/staging/k8s/scripts/setup-ecr-secret.sh
+        run: |
+          set -eu
+          AWS_ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+          ECR_REGISTRY="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+          ECR_TOKEN="$(aws ecr get-login-password --region "$AWS_REGION")"
+
+          kubectl delete secret ecr-registry -n tearleads 2>/dev/null || true
+          kubectl create secret docker-registry ecr-registry \
+            --namespace=tearleads \
+            --docker-server="${ECR_REGISTRY}" \
+            --docker-username=AWS \
+            --docker-password="${ECR_TOKEN}"
 
       - name: Pin deployments to published image tag
         run: |
