fix(k8s): address Gemini review feedback
- Use TS_AUTHKEY env var instead of --authkey flag
- Pass auth key via temp file instead of CLI arg
- Wrap Tailscale tasks in block with single when
- Use lineinfile for TLS SAN config
- Use handler for k3s restart
- Fix cleanup script usage message

--- a/ansible/playbooks/k8s.yml
+++ b/ansible/playbooks/k8s.yml
@@ -27,62 +27,59 @@
     - name: Apply shared Linux security baseline
       ansible.builtin.import_tasks: tasks/linuxSecurityBaseline.yml
 
-    - name: Download Tailscale install script
-      ansible.builtin.get_url:
-        url: https://tailscale.com/install.sh
-        dest: /tmp/install-tailscale.sh
-        mode: "0755"
-      when:
-        - tailscale_auth_key is defined and tailscale_auth_key | length > 0
-        - not ansible_check_mode
-
-    - name: Install Tailscale
-      ansible.builtin.command:
-        cmd: /tmp/install-tailscale.sh
-        creates: /usr/bin/tailscale
+    - name: Configure Tailscale
       when: tailscale_auth_key is defined and tailscale_auth_key | length > 0
+      block:
+        - name: Download Tailscale install script
+          ansible.builtin.get_url:
+            url: https://tailscale.com/install.sh
+            dest: /tmp/install-tailscale.sh
+            mode: "0755"
+          when: not ansible_check_mode
 
-    - name: Check Tailscale status
-      ansible.builtin.command:
-        cmd: tailscale status
-      register: tailscale_status
-      failed_when: false
-      changed_when: false
-      when: tailscale_auth_key is defined and tailscale_auth_key | length > 0
+        - name: Install Tailscale
+          ansible.builtin.command:
+            cmd: /tmp/install-tailscale.sh
+            creates: /usr/bin/tailscale
 
-    - name: Connect to Tailscale
-      ansible.builtin.command:
-        cmd: tailscale up --authkey={{ tailscale_auth_key }} --hostname=staging-k8s
-      changed_when: true
-      when:
-        - tailscale_auth_key is defined and tailscale_auth_key | length > 0
-        - tailscale_status.rc != 0
+        - name: Check Tailscale status
+          ansible.builtin.command:
+            cmd: tailscale status
+          register: tailscale_status
+          failed_when: false
+          changed_when: false
 
-    - name: Verify Tailscale is running
-      ansible.builtin.command:
-        cmd: tailscale status
-      changed_when: false
-      when: tailscale_auth_key is defined and tailscale_auth_key | length > 0
+        - name: Connect to Tailscale
+          ansible.builtin.command:
+            cmd: tailscale up --hostname=staging-k8s
+          environment:
+            TS_AUTHKEY: "{{ tailscale_auth_key }}"
+          changed_when: true
+          no_log: true
+          when: tailscale_status.rc != 0
 
-    - name: Ensure k3s TLS SAN includes Tailscale hostname
-      ansible.builtin.copy:
-        dest: /etc/rancher/k3s/config.yaml
-        content: |
-          tls-san:
-            - "staging-k8s"
-        owner: root
-        group: root
-        mode: "0644"
-      register: k3s_config
-      when: tailscale_auth_key is defined and tailscale_auth_key | length > 0
+        - name: Verify Tailscale is running
+          ansible.builtin.command:
+            cmd: tailscale status
+          changed_when: false
 
-    - name: Restart k3s to pick up TLS SAN change
-      ansible.builtin.systemd:
-        name: k3s
-        state: restarted
-      when:
-        - tailscale_auth_key is defined and tailscale_auth_key | length > 0
-        - k3s_config is changed
+        - name: Ensure k3s config directory exists
+          ansible.builtin.file:
+            path: /etc/rancher/k3s
+            state: directory
+            owner: root
+            group: root
+            mode: "0755"
+
+        - name: Ensure k3s TLS SAN includes Tailscale hostname
+          ansible.builtin.lineinfile:
+            path: /etc/rancher/k3s/config.yaml
+            line: 'tls-san: ["staging-k8s"]'
+            create: true
+            owner: root
+            group: root
+            mode: "0644"
+          notify: Restart k3s
 
     - name: Wait for k3s to be ready
       ansible.builtin.command:
@@ -276,6 +273,11 @@
         - "/tmp/buildkit-v{{ buildkit_version }}.linux-amd64.tar.gz"
 
   handlers:
+    - name: Restart k3s
+      ansible.builtin.systemd:
+        name: k3s
+        state: restarted
+
     - name: Restart buildkit
       ansible.builtin.systemd:
         name: buildkit
