fix(k8s): remove stale hosts entry before add
On self-hosted runners /etc/hosts persists between runs.
Remove any existing staging-k8s entry before appending
the fresh Tailscale IP to prevent stale DNS resolution.

--- a/.github/workflows/deploy-staging-k8s.yml
+++ b/.github/workflows/deploy-staging-k8s.yml
@@ -56,6 +56,7 @@ jobs:
             exit 1
           fi
           echo "Resolved staging-k8s to ${TAILSCALE_IP}"
+          sudo sed -i '/\bstaging-k8s\b/d' /etc/hosts
           echo "${TAILSCALE_IP} staging-k8s" | sudo tee -a /etc/hosts
 
       - name: Configure kubeconfig
