--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,6 +14,10 @@
       "types": "./dist/redis/index.d.ts",
       "import": "./dist/redis/index.js"
     },
+    "./server": {
+      "types": "./dist/server/index.d.ts",
+      "import": "./dist/server/index.js"
+    },
     "./licenses.json": "./dist/licenses.json"
   },
   "files": [
